Correct button sizing on mobile

--- a/style.css
+++ b/style.css
@@ -40,9 +40,9 @@ h1 {
   color: inherit;
   width: 80px;
   height: 30px;
-  font-size: 14px;
+  font-size: 10px;
   line-height: 20px;
-  margin: 0 10px 10px 10px;
+  margin: 0 2px 10px 2px;
   background-color: rgb(0, 97, 189);
   color: white;
   cursor: pointer;
@@ -63,6 +63,7 @@ h1 {
 
   .btn {
     width: 120px;
+    font-size: 14px;
   }
 
   .container {
